--- a/apps/meetie-service/src/app/globals.css
+++ b/apps/meetie-service/src/app/globals.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --primary-100: #f5f1ff;
+    --primary-200: #efe9ff;
+    --primary-300: #c6bbe1;
+    --primary-400: #8655ff;
+    --primary-500: #6224fd;
+
+    --white: #ffffff;
+    --black: #000000;
+
+    --gray-100: #e6e6e6;
+    --gray-200: #999999;
+    --gray-300: #5e5e5e;
+    --gray-400: #404040;
+    --gray-500: #222222;
+  }
+}
