--- a/apps/meetie-service/src/app/globals.css
+++ b/apps/meetie-service/src/app/globals.css
@@ -23,6 +23,7 @@
     --white: #ffffff;
     --black: #000000;
 
+    --gray-50: #f5f5f5;
     --gray-100: #e6e6e6;
     --gray-200: #999999;
     --gray-300: #5e5e5e;
