feat: font, color theme add

--- a/apps/meetie-service/src/app/globals.css
+++ b/apps/meetie-service/src/app/globals.css
@@ -13,10 +13,12 @@
 
     --info-50: #f1f2f6;
     --info-100: #edf1ff;
+    --info-150: #e3e3fa;
     --info-200: #82829b;
     --info-300: #7277f0;
     --info-400: #7f6caf;
     --info-500: #645294;
+    --info-600: #3f3fff;
 
     --white: #ffffff;
     --black: #000000;
