--- a/apps/meetie-service/src/app/globals.css
+++ b/apps/meetie-service/src/app/globals.css
@@ -8,17 +8,17 @@
     --primary-100: #f5f1ff;
     --primary-200: #efe9ff;
     --primary-300: #c6bbe1;
+    --primary-350: #7f6caf;
     --primary-400: #8655ff;
+    --primary-450: #645294;
     --primary-500: #6224fd;
 
-    --info-50: #f1f2f6;
-    --info-100: #edf1ff;
-    --info-150: #e3e3fa;
-    --info-200: #82829b;
-    --info-300: #7277f0;
-    --info-400: #7f6caf;
-    --info-500: #645294;
-    --info-600: #3f3fff;
+    --blue-50: #f1f2f6;
+    --blue-100: #edf1ff;
+    --blue-200: #e3e3fa;
+    --blue-300: #82829b;
+    --blue-400: #7277f0;
+    --blue-500: #3f3fff;
 
     --white: #ffffff;
     --black: #000000;
