--- a/apps/meetie-service/src/app/globals.css
+++ b/apps/meetie-service/src/app/globals.css
@@ -37,6 +37,7 @@
     --gray-50: #f5f5f5;
     --gray-100: #e6e6e6;
     --gray-200: #999999;
+    --gray-250: #9d9d9d;
     --gray-300: #5e5e5e;
     --gray-400: #404040;
     --gray-500: #222222;
