--- a/apps/meetie-service/src/app/globals.css
+++ b/apps/meetie-service/src/app/globals.css
@@ -40,6 +40,7 @@
     --gray-250: #9d9d9d;
     --gray-300: #5e5e5e;
     --gray-400: #404040;
+    --gray-450: #434343;
     --gray-500: #222222;
     --gray-600: #000417;
   }
