--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,7 @@
 
     --gray-50: #f5f5f5;
     --gray-100: #e6e6e6;
+    --gray-150: #f1f3f5;
     --gray-200: #999999;
     --gray-250: #9d9d9d;
     --gray-300: #5e5e5e;
